--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
